--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "cacheDirectories": [
+    "node_modules"
+  ],
   "keywords": ["youtube", "streaming", "ffmpeg", "rtmp"],
   "author": "",
   "license": "MIT",
