--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-fileupload": "^1.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
