--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "cacheDirectories": [
     "node_modules"
   ],
-  "keywords": ["youtube", "streaming", "ffmpeg", "rtmp"],
+  "keywords": [
+    "youtube",
+    "streaming",
+    "ffmpeg",
+    "rtmp"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "fluent-ffmpeg": "^2.1.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
